tests/NormalTests/paczka1/small_fuzzy/30249038.err
Error in line 6: HlwmOsw!sEG S1!2 129,8
Error in line 3: HlwmOsw6sEG S162 68,3
